<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_care"
        android:gravity="center"
        android:textStyle="bold|normal|italic"
        android:layout_marginTop="40dp"
        android:textSize="40dp"
        android:textColor="@android:color/background_light" />
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"

                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    android:textStyle="bold|italic|normal"
                     android:background="@drawable/switch_tricks"
                    android:layout_weight="1"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:text="@string/log_in" />
                <TextView
                    android:id="@+id/signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/pinkcolor"
                    android:textSize="20sp"
                    android:textStyle="bold|italic|normal"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sign_up" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/loginlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:gravity="center"
                android:padding="25dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/email_or_user_name"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:shapeAppearanceOverlay="@style/button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName|textEmailAddress"
                        android:id="@+id/eMail"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/password"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:shapeAppearanceOverlay="@style/button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:endIconMode="password_toggle"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwords"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="15sp"
                    android:text="@string/forgot_password"
                    android:textStyle="normal"
                    android:textColor="#616161"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/signuplayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:gravity="center"
                android:visibility="gone"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/email_or_user_name"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:shapeAppearanceOverlay="@style/button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName|textEmailAddress"
                        android:id="@+id/eMails"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/password"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:shapeAppearanceOverlay="@style/button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:endIconMode="password_toggle"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwordss"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/confirm_password"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:shapeAppearanceOverlay="@style/button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:endIconMode="password_toggle"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwordsss"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/signin"

                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:elevation="20dp"
                android:gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/textcolor"
                android:layout_gravity="center"
                android:backgroundTint="@color/pinkcolor"
                android:shadowColor="@color/pinkcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textStyle="normal"
                android:textColor="#474646"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="35dp"
                    android:src="@drawable/ic_icons8_facebook"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:layout_width="35dp"
                    android:src="@drawable/ic_icons8_instagram"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:layout_width="35dp"
                    android:src="@drawable/ic_icons8_twitter"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>